#393: Migrate production code from Scala to Java (#394)